--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tak Toe</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Welcome to Tic Tac Toe</h1>
@@ -23,6 +24,12 @@
 
     </div>
 
+    <div class="endgame show">
+        <div class="winningMessage"></div>
+        <button id = "resetButton">
+            Play Again
+        </button>
+    </div>
     
     <script src="script.js"></script>
   </body>
