final touch without animations

--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <div id= finishGame class="endgame">
+    <div id= finishGame class="endgame show">
         <div class="winningMessage"></div>
         <button id = "resetButton">
             Play Again
