updated switchturns method

--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Welcome to Tic Tac Toe</h1>
+    <h3>Start the game with X's turn first</h3>
     <div class="boardGrid">
 
       <div class="boxes"></div>
@@ -24,7 +25,7 @@
 
     </div>
 
-    <div id= finishGame class="endgame show">
+    <div id= finishGame class="endgame">
         <div class="winningMessage"></div>
         <button id = "resetButton">
             Play Again
