implemented scores feature

--- a/game.html
+++ b/game.html
@@ -10,6 +10,12 @@
   </head>
   <body>
     <h1>Welcome to Tic Tac Toe</h1>
+    <div class="scores">
+      <div class="scoreX">X scores</div>
+      <div class="scoreX"></div>
+      <div class="scoreO">O scores</div>
+      <div class="scoreO"></div>
+    </div>
     <h3>Start the game with X's turn first</h3>
     <div class="boardGrid">
 
