--- a/game.html
+++ b/game.html
@@ -18,16 +18,19 @@
     </div>
     <h3>Start the game with X's turn first</h3>
     <div class="boardGrid">
+      
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
+      <div class="boxes"></div>
 
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
-      <div class="boxes"></div>
+    </div>
+    <div id= winningStrokeLine >
 
     </div>
 
