--- a/game.html
+++ b/game.html
@@ -34,11 +34,10 @@
 
     </div>
 
-    <div id= finishGame class="endgame">
-        <div class="winningMessage"></div>
-        <button id = "resetButton">
-            Play Again
-        </button>
+    <div id= finishGame>
+      <!-- <button id = "resetButton">
+        Play Again
+    </button> -->
     </div>
     
     <script src="script.js"></script>
