--- a/game.html
+++ b/game.html
@@ -29,13 +29,13 @@
       <div class="boxes"></div>
 
     </div>
-    <div id= winningStrokeLine >
-    </div>
+    <div id= winningStrokeLine></div>
 
     <div id= finishGame>
-      <!-- <button id = "resetButton">
+      <div class="winningMessage"></div>
+      <button id = "resetButton">
         Play Again
-    </button> -->
+    </button>
     </div>
     
     <script src="script.js"></script>
